# IPv4_streaming_media

./: .clang-format  .gitignore  README.md
src/client/: CMakeLists.txt  client.c  client.h
src/include/: proto.h  type.h
src/server/: CMakeLists.txt  server.c
